[package]
name = "harbor-sdk"
version = "0.1.0"
edition = "2021"
description = "Add API key auth and billing to your Rust API in one line. Harbor handles validation so your users can authenticate with keys they manage from the Harbor dashboard."
license = "MIT"
repository = "https://github.com/nicolugo0503-glitch/harbor-rust"
homepage = "https://harbor-black.vercel.app"
documentation = "https://docs.rs/harbor-sdk"
readme = "README.md"
keywords = ["api", "authentication", "middleware", "billing", "harbor"]
categories = ["web-programming", "authentication", "network-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[dependencies.axum]
version = "0.7"
optional = true

[features]
default = []
axum = ["dep:axum"]
full = ["axum"]
